[gd_scene load_steps=2 format=3 uid="uid://mokflplngt8k"]

[ext_resource type="Script" path="res://Autentication.gd" id="1_4k6ri"]

[node name="Autentication" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4k6ri")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -138.5
offset_right = 100.0
offset_bottom = 138.5
grow_horizontal = 2
grow_vertical = 2

[node name="EmailEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Email"

[node name="PasswordEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Password"
secret = true

[node name="LoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Acceder"

[node name="SignupButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Registrarse"

[node name="StateLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SignupButton" to="." method="_on_signup_button_pressed"]
